--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ Flask = "^2.2.2"
 cowsay = "^5.0"
 
 
+[tool.poetry.group.dev.dependencies]
+gunicorn = "^20.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
